some more functionality with the js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
       <div class="col-sm-3" id="history">
         <p id="searchP">Search For a City:</p>
         <div class="row" id="searchRow">
-          <input type="text" class="form-control col-sm-8" id="search" />
+          <input
+            type="text"
+            class="form-control col-sm-8"
+            id="search"
+            placeholder="City, ST, CO"
+          />
           <button
             type="button"
             class="btn btn-primary fas fa-search-location col-sm-2"
