some updates to JS

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="col-sm-8" id="currentWeather">
         <div id="currentCity">
           <div id="cityHeader">
-          <h4  id="cityName"></h4>
+          <h4  id="cityName">Find Out the Forecast for Your City</h4>
           <img  id="icon">
           </div>
           <div>
@@ -59,6 +59,6 @@
     integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
     crossorigin="anonymous"
   ></script>    
-  <script src="assets/script.js"></script>
+  <script src="assets/script1.js"></script>
   </body>
 </html>
